test: Project 통합 테스트, 서비스 단위 테스트 작성